# introdus

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  PLAN.md  README.md  TEST_PLAN.md  TODO.md  clippy.toml  create-dev-container.sh  deny.toml  host_install.sh  host_listener.py  host_notify.sh  install.sh  install_dev_machine_listener.sh  laptop_notify_tunnel.sh  launch.sh  launch_dev_container.sh  rustfmt.toml  sample.env  setup.sh
.cargo/: audit.toml  config.toml
.claude/rules/: 00_agent_instructions.md  01_overview.md  02_technical-overview.md  03_source-code-overview.md  04_linting.md  05_security.md  06_testing.md
agent_rules/: 00_agent_instructions.md  01_overview.md  02_technical-overview.md  03_source-code-overview.md  04_linting.md  05_security.md  06_testing.md
container/: agents.sh
container/claude/: settings.json  test_notify.sh
container/egress/: firewall-entrypoint.sh  tinyproxy.conf
crates/introdus-cli/: Cargo.toml
crates/introdus-cli/src/: cli_actions.rs  context.rs  frontend.rs  image.rs  install.rs  launch.rs  lifecycle.rs  main.rs  menu.rs  menu_actions.rs  menu_tunnel.rs  notify.rs  notify_listen.rs  panel.rs  panel_draw.rs  preflight.rs  run.rs  screenshot.rs  session.rs  ui.rs  util.rs  wizard.rs
crates/introdus-cli/src/send_files/: browser.rs  mod.rs  transfer.rs
crates/introdus-cli/tests/: cli_actions_it.rs  menu_pty.rs  notify_listen_pty.rs  send_files_pty.rs  wizard_pty.rs
crates/introdus-cli/tests/common/: mod.rs
crates/introdus-core/: Cargo.toml
crates/introdus-core/src/: agents.rs  assets.rs  config.rs  containers.rs  egress.rs  env_file.rs  lib.rs  names.rs  notify.rs  paths.rs  podman.rs  ports.rs  process.rs  remote.rs  session.rs  sshconfig.rs  tmux.rs
docs/: How to connect to container.md  Notifications.md  Running on a remote host.md  Technical details.md  architecture.md  claude-remote-control.md  coding-agents.md  container-hardening.md  control-panel.md  egress-filtering.md  host-data-and-ports.md  launch-hooks.md  notifications.md  paseo.md  persistence-and-lifecycle.md  remote-host.md  send-files.md  setup-and-configuration.md  vscode.md  webapp-tunnel.md
scripts/: gen-agent-rules.sh  install-pre-commit.sh  lint.sh
test-harness/: Dockerfile  README.md  driver-agent-launch.sh  driver-agent-missing.sh  driver-agents.sh  driver-cli.sh  driver-common.sh  driver-detach.sh  driver-egress.sh  driver-install.sh  driver-launch.sh  driver-lifecycle.sh  driver-menu.sh  driver-paseo-direct.sh  driver-paseo.sh  driver-quit-session.sh  driver-quit-stop.sh  driver-reattach.sh  driver-send-files.sh  driver-verify.sh  harness.sh
tools/: package.json  pnpm-lock.yaml
